# CPP-JSONParser

./: CMakeLists.txt  CPP-JSONParser.cpp  CPP-JSONParser.h  ExposedParserFunctions.cpp  New-CPP.cpp  README.md  TestObject.cpp  ToDo.txt
ExposedFunctions/: CheckIfContainsKey.cpp  CheckIfContainsKey.h  cppJSONParser.h
FileReader/: FileReader.cpp  FileReader.h  FileReaderNew.cpp  FileReaderNew.h
HelperFunctions/: PrintJSON.cpp  PrintJSON.h  TypeConversions.cpp  TypeConversions.h
Structs/: JSONValueStruct.cpp  JSONValueStruct.h
Testing/FileReaderTests/: FileReaderTests.cpp
Testing/HolderFolder/: BasicTesting.cpp
Testing/ParserTests/: JSONParserTests.cpp  ParserTests.cpp  SupportingTestFunctions.cpp  SupportingTestFunctions.h  TestCase1.cpp
Testing/ParserTests/TypeParsingTests/: VectorParcingTests.cpp
Testing/StructTesting/: JSONValueStructTests.cpp
Testing/TestData/: ValidMultiLine.txt  ValidMultiLineKeysAndValues.txt  ValidString.txt  ValidStringArray.txt  ValidStringKeysAndValues.txt  ValidStringWhiteSpace.txt  ValidStringWhiteSpaceKeysAndValues.txt  ValidStringWithArray.txt  ValidStringWithArrayKeysAndValues.txt  ValidStringWithDecimals.txt  ValidStringWithDecimalsKeysAndValues.txt
Testing/TestData/Type_testing/vector/: vector_type_bool.txt  vector_type_double.txt  vector_type_nested_double.txt  vector_type_string.txt
Testing/TestDataPreProcessing/: TestDataPreProcessing.cpp  TestDataPreProcessing.h
